# opencode_skill

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: prd.md  rfc.md  test.md  working.md
scripts/: opencode-skill
skills/: skill_opencode_data.md  skill_opencode_periodic_job.md  skill_opencode_submission.md
src/opencode_skill/: __main__.py  batch.py  cli.py  client.py  db.py  export.py  jobs.py  migrate.py  query.py  selector.py
tests/: conftest.py  test_batch.py  test_cli.py  test_client.py  test_db.py  test_export.py  test_jobs.py  test_migrate.py  test_query.py  test_selector.py
tests/fixtures/: empty_opencode.db
