[project]
name = "opencode-data-skill"
version = "0.1.0"
description = "Local-first CLI and AI skill for maintaining OpenCode SQLite data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
opencode-skill = "opencode_skill.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opencode_skill = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
