[project]
name = "opencode-data-skill"
version = "0.1.0"
description = "Local-first CLI and AI skill for OpenCode submission and SQLite data maintenance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32,<3",
]

[project.scripts]
opencode-skill = "opencode_skill.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opencode_skill = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
